--- a/css/general.css
+++ b/css/general.css
@@ -1,5 +1,5 @@
-/* TAGS */
-html, body, #map{
+/*====== TAGS ======*/
+html, body{
 	margin: 0;
 	padding: 0;
 	width: 100%;
@@ -12,7 +12,18 @@ a{
     color: rgb(33, 37, 41);
 }
 
-/* LOGIN & REGISTER FORM */
+
+/*====== MENU ======*/
+#menu{
+    top: 0;
+    left: 0;
+    z-index: 1;
+    position: fixed;
+    background-color: white;
+}
+
+
+/*====== LOGIN & REGISTER FORM ======*/
 .loginFormWrapper{
     width: 100%;
     height: 100%;
