--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
+
 /*====== TAGS ======*/
 html, body{
 	margin: 0;
@@ -5,6 +8,7 @@ html, body{
 	width: 100%;
 	height: 100%;
     background-color: rgb(212, 212, 212);
+    box-sizing: border-box;
 }
 
 a{
@@ -14,12 +18,76 @@ a{
 
 
 /*====== MENU ======*/
-#menu{
-    top: 0;
-    left: 0;
-    z-index: 1;
-    position: fixed;
-    background-color: white;
+
+.main-nav{
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+.menu{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  opacity: 0;
+  visibility: hidden;
+}
+.menu__item{
+  margin: 0 16px;
+}
+.menu__link{
+  font-family: 'Josefin Sans', sans-serif;
+  color: black;
+  text-decoration: none;
+}
+.menu-bar{
+  width: 30px;
+  margin: 0 10px;
+  cursor: pointer;
+  color: white;
+}
+.one,.two,.three{
+  width: 110%;
+  background: black;
+  height: 3px;
+  transition: all 0.5s;
+}
+.two{
+  margin: 5px 0;
+}
+
+/*====== ANIMATION MENU ======*/
+
+.nav-items-show .one{
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.nav-items-show .two{
+  opacity: 0;
+}
+.nav-items-show .three{
+  transform: rotate(-45deg) translate(6px, -7px);
+}
+
+.nav-items-show .menu{
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/*====== TYPER ======*/
+
+
+h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  color: black;
+  text-align: center;
+
 }
 
 
