--- a/css/general.css
+++ b/css/general.css
@@ -15,6 +15,21 @@ a{
     color: rgb(33, 37, 41);
 }
 
+/*====== INDEX ======*/
+
+
+.indexh1 {
+  font-family: 'Josefin Sans', sans-serif;
+  position: absolute;
+  top: 35%;
+  transform: translateY(-50%);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  color: black;
+  text-align: center;
+}
+
 
 /*====== MENU ======*/
 
