--- a/css/general.css
+++ b/css/general.css
@@ -7,7 +7,7 @@ html, body{
 	padding: 0;
 	width: 100%;
 	height: 100%;
-  box-sizing: border-box;
+
   background-color: rgb(212, 212, 212);
 }
 
@@ -17,13 +17,31 @@ a{
 }
 
 /*====== INDEX ======*/
-.indexh1 {
-  font-family: 'Bree Serif', serif;
-  margin-top: 60%;
+
+.index{
+  height: 100%;
+  position: relative; 
+}
+
+.indexsvg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 29%;
+  position: absolute;
+  transform: translateX(5%);
+  width: 90%;
+}
+
+.typerh2 {
+  font-family: 'Josefin Sans', sans-serif;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  margin: 0;
   padding: 0;
   width: 100%;
-  font-size: 300%;
-  color: #019267;
+  color: black;
   text-align: center;
 }
 
@@ -32,7 +50,8 @@ a{
 
 .abouth1 {
   font-family: 'Josefin Sans', sans-serif;
-  margin-top: 15%;
+  margin-top: 52px;
+  margin-bottom: 30px;
   padding: 0;
   width: 100%;
   color: #019267;
@@ -43,6 +62,20 @@ a{
   font-family: 'Josefin Sans', sans-serif;
   padding: 0;
   text-align: center;
+}
+.aboutimgs{
+  margin-top: 32px;
+  position: relative;
+}
+.profile{
+  width: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.aboutp2{
+  margin-top: 25px;
+  padding: 0 20px;
 }
 
 
@@ -61,10 +94,10 @@ a{
     opacity: 0;
     visibility: hidden;
   }
-  .menu__item{
+  .menu-item{
     margin: 0 16px;
   }
-  .menu__link{
+  .menu-link{
     font-family: 'Josefin Sans', sans-serif;
     color: black;
     text-decoration: none;
@@ -104,20 +137,6 @@ a{
   }
   
   
-/*====== TYPER ======*/
-  
-  h2 {
-    font-family: 'Josefin Sans', sans-serif;
-    position: absolute;
-    top: 55%;
-    transform: translateY(-50%);
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    color: black;
-    text-align: center;
-  
-  }
 
 
 /*====== LOGIN & REGISTER FORM ======*/
