--- a/css/general.css
+++ b/css/general.css
@@ -91,11 +91,11 @@ a{
     padding: 0;
     list-style: none;
     display: flex;
-    opacity: 0;
-    visibility: hidden;
+    /*opacity: 0;
+    visibility: hidden;*/
   }
   .menu-item{
-    margin: 0 16px;
+    margin: 0 15px;
   }
   .menu-link{
     font-family: 'Josefin Sans', sans-serif;
@@ -136,10 +136,20 @@ a{
     opacity: 1;
   }
   
-  
 
+/*====== USERBOX ======*/
+
+.dropdown {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.dropdown-menu {
+  color: white;
+}
 
 /*====== LOGIN & REGISTER FORM ======*/
+
 .loginFormWrapper{
     width: 100%;
     height: 100%;
