--- a/css/general.css
+++ b/css/general.css
@@ -121,19 +121,14 @@ a{
   
 /*====== ANIMATION MENU ======*/
   
-  .nav-items-show .one{
+  .menu-bar-show .one{
     transform: rotate(45deg) translate(5px, 5px);
   }
-  .nav-items-show .two{
+  .menu-bar-show .two{
     opacity: 0;
   }
-  .nav-items-show .three{
+  .menu-bar-show .three{
     transform: rotate(-45deg) translate(6px, -7px);
-  }
-  
-  .nav-items-show .menu{
-    visibility: visible;
-    opacity: 1;
   }
   
 
@@ -150,16 +145,75 @@ a{
 
 /*====== LOGIN & REGISTER FORM ======*/
 
-.loginFormWrapper{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(156, 156, 156, 0.511);
-    position: fixed;
-    top: 0;
-    left: 0;
+
+
+.modal-content {
+  border-radius: 30px;
+  background-color: #FFD365;
+  border: 6px solid #FDFFA9;
+}
+
+.modal-header, .modal-footer{
+  border-bottom: 0;
+  border-top: 0;
+}
+
+.modal-dialog{
+  margin-top: 15% !important;
 }
 
 .loginFormWrapper div{
     margin: 100px;
     background-color: aquamarine;
 }
+
+.modal-body img{
+  display: block ;
+  margin-left: auto ;
+  margin-right: auto ;
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.input-group-text {
+  background-color: #FFD365 !important;
+  outline: none;
+}
+
+.form input {
+  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  border: none;
+  outline: none;
+  padding: 5px 0px;
+  width: 80%;
+  border-bottom: 6px solid #00C897;
+  background-color: #E8F0F2;
+}
+
+.custom-btn-1 {
+  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-top: 25px;
+  color: #E8F0F2;
+  width: 80%;
+  background-color: #019267;
+  border: none;
+  border-radius: 25px;
+  transition: all 0.5s;
+}
+
+.custom-btn-2 {
+  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  color: #019267;
+  width: 80%;
+  background-color: #FFD365;
+  border: 2px solid #019267;
+  border-radius: 25px;
+  transition: all 0.5s;
+}
+
