--- a/css/general.css
+++ b/css/general.css
@@ -261,3 +261,10 @@ a{
     transition: all 0.5s;
 }
 
+#customLoginError{
+    color: #dc3545;
+    margin-top: .6rem;
+    font-size: .875em;
+}
+
+/*====== NEW SPOT FORM ======*/
