--- a/css/map.css
+++ b/css/map.css
@@ -1,3 +1,21 @@
+@keyframes newSpotButton {
+    0% {
+        transform: scale(1,1) translate(0px, 0px);
+    }
+
+    30%{
+        transform: scale(1,0.8) translate(0px, 10px); 
+    }
+
+    75%{
+        transform: scale(1,1.1) translate(0px, -25px); 
+    }
+
+    100% {
+        transform: scale(1,1) translate(0px, 0px);
+    }
+}
+
 #map {
 	width: 100%;
 	height: 100%;
@@ -11,6 +29,8 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    width: 65px; 
+    margin-right: 10px;
 }
 
 #userLocationButton{
@@ -18,7 +38,22 @@
     position: fixed;
     left: 0;
     bottom: 0;
+    width:45px; 
+    margin-bottom: 10px; 
+    margin-left: 10px;
 }
+
+.bounce {
+    text-align:center;
+    margin:0 auto;
+    margin-top:100px;
+    height:20px;
+    width:150px;
+    padding:20px;  
+    background:tomato;
+    animation: bounce 0.75s infinite;
+}
+
 
 .newMarker{
     z-index: 100;
@@ -99,4 +134,5 @@
     font-family: 'Josefin Sans', sans-serif;
     font-size: 14px;
 }
+
 
