--- a/css/map.css
+++ b/css/map.css
@@ -66,6 +66,7 @@ body{
 .newCatButton{
     cursor: pointer;
     padding-left: 5px;
+    background-color: rgba(1, 146, 103, 0.7) !important;
 }
 
 .newCatButton img{
