--- a/css/general.css
+++ b/css/general.css
@@ -8,7 +8,7 @@ html, body{
 	width: 100%;
 	height: 100%;
 
-  background-color: #003C5A;
+    background-color: #003c5a;
 }
 
 body{
@@ -50,17 +50,21 @@ a{
     display: flex;
     justify-content: space-around;
     width: 100%;
-    max-width: 420px;
+    max-width: 350px;
     margin-right: 30px;
     height: 100%;
 
     /*opacity: 0;
     visibility: hidden;*/
 }
+.menu .logged-in-menu{
+    max-width: 150px;
+}
 
 .menu-item, .menu-link{
     height: 100%;
     display: inline-block;
+    cursor: pointer;
 }
 
 .menu-link{
