fixed index responsiveness

--- a/css/general.css
+++ b/css/general.css
@@ -23,9 +23,6 @@ a{
 /*====== MEDIA QUERY ======*/
 
 @media only screen and (min-width: 400px){
-    .modal-body img{
-        margin-left: -50px !important;
-    }
     .menu-bar{
         display: none;
     }
@@ -125,22 +122,22 @@ a{
 /*====== LOGIN & REGISTER FORM ======*/
 
 .modal-content {
-    border-radius: 70px;
+    border-radius: 60px;
     background-color: #FFD365;
     border: 8px solid #FDFFA9;
     padding-bottom: 30px;
+    max-width: 400px;
+    margin-bottom: 20%; /*move it up*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
 }
 
-.modal-header, .modal-footer{
-    border-bottom: 0;
-    border-top: 0;
-}
 .btn-close{
-    margin-top: 5px !important;
-}
-
-.modal-dialog{
-    margin-top: 15% !important;
+    position: absolute;
+    top: 18px;
+    right: 18px;
 }
 
 .loginFormWrapper div{
@@ -150,8 +147,10 @@ a{
 
 .modal-body img{
     display: block;
-    margin-left: -115px;
-    margin-bottom: 40px;
+    padding-top: 51px;
+    padding-bottom: 38px;
+    margin: auto;
+    width: 135px;
 }
 
 .input-group-text {
@@ -165,36 +164,41 @@ a{
     margin-right: auto !important;
     border: none;
     outline: none;
-    padding: 5px 0px;
-    width: 80%;
+    padding: 20px 0 0 3px;
+    width: 100%;
+    max-width: 250px;
     border-bottom: 6px solid #00C897;
     background-color: #E8F0F2;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
-.custom-btn-1 {
+
+.loginBtn{
     font-family: 'Bree Serif', serif;
-    margin-top: 40px;
-    padding-top: .3rem !important;
-    padding-bottom: .3rem !important;
+    padding: 3px 0px 5px 0px;
+    width: 100%;
+    max-width: 180px;
+    border-radius: 25px;
+    transition: all 0.5s;
+}
+
+.loginMainBtn {
+    margin-top: 60px;
     color: #E8F0F2;
-    width: 50%;
     background-color: #019267;
     border: none;
-    border-radius: 25px;
-    transition: all 0.5s;
 }
 
-.custom-btn-2 {
-    font-family: 'Bree Serif', serif;
+.loginSecondaryBtn {
     margin-top: 20px;
-    padding-top: .3rem !important;
-    padding-bottom: .3rem !important;
     color: #019267;
-    width: 50%;
     background-color: #FFD365;
     border: 2px solid #019267;
-    border-radius: 25px;
-    transition: all 0.5s;
+}
+
+.loginSecondaryBtn:active {
+    background-color: #019267;
+    color: white;
 }
 
 #customLoginError{
