--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ body{
     background-color: #E2E2E2;
     border: 1px solid rgb(31, 31, 31, 0.2);
     border-radius: 4px;
-    padding: 6px 12px 6px 12px;
+    padding: 6px 0 6px 0;
     color: rgb(33, 37, 41);
 }
 
@@ -79,25 +79,30 @@ body{
     width: 42px; /*same as search button*/
 }
 
+.category{ /*remove button properties*/
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: left;
+}
+
 .category{
     display: block;
     cursor: pointer;
     width: 100%;
-}
-
-.category{ /*remove button properties*/
-	background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
-    text-align: left;
+    padding: 0 12px;
 }
 
 .category:hover{
-    color: black;
+    background-color: #c0c0c0;
+}
+
+.noCatFound{
+    padding: 0 12px;
 }
 
 /*====== TYPER ======*/
