--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 
+/*temp*/
+#debug-icon{
+    display: none !important;
+}
+
 /*====== TAGS ======*/
 html, body{
 	margin: 0;
