--- a/public/css/general.css
+++ b/public/css/general.css
@@ -50,7 +50,7 @@ a{
     padding: 0;
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     width: 100%;
     max-width: 350px;
     margin-right: 30px;
@@ -72,6 +72,7 @@ a{
     color: white;
     text-decoration: none;
     padding-top: 14px;
+    padding-left: 25px;
 }
 
 .menu-link:hover{
@@ -138,7 +139,7 @@ a{
 /*====== LOGIN & REGISTER FORM ======*/
 
 .modal-content {
-    border-radius: 60px;
+    border-radius: 35px;
     background-color: #FFD365;
     border: 8px solid #FDFFA9;
     padding-bottom: 30px;
