--- a/public/css/map.css
+++ b/public/css/map.css
@@ -1,23 +1,16 @@
-@keyframes newSpotButton {
-    0% {
-        transform: scale(1,1) translate(0px, 0px);
-    }
-
-    30%{
-        transform: scale(1,0.8) translate(0px, 10px); 
-    }
-
-    75%{
-        transform: scale(1,1.1) translate(0px, -25px); 
-    }
-
-    100% {
-        transform: scale(1,1) translate(0px, 0px);
-    }
-}
 
 body{
     padding: 0 !important; /*rectificate so menu is transparent */
+}
+
+.main-nav{
+    background-color: rgba(255, 255, 255, 0.5) ;
+}
+.menu-link, .dropdown-username{
+    color: black !important;
+}
+.one, .two, .three{
+    background-color: black !important;
 }
 
 #map {
@@ -100,8 +93,6 @@ body{
 .listNotFiltered img{
     transform: rotate(45deg);
 }
-
-
 
 
 
