--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,3 +1,14 @@
+body{
+  background-color: #D4D4D4;
+}
+
+.menu-link, .dropdown-username{
+  color: black !important;
+}
+.one, .two, .three{
+  background-color: black !important;
+}
+
 .profile-box{
     font-family: 'Josefin Sans', sans-serif !important;
     margin-top: 55px;
