--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,3 +1,9 @@
+@media only screen and (min-width: 1070px){
+    .hr-profile{
+        margin-left: 25% !important;
+        margin-right: 25% !important;
+    }
+}
 
 .profile-box {
     font-family: 'Josefin Sans', sans-serif !important;
@@ -105,7 +111,20 @@
     background-color: #FFD365;
 }
 
+.profile-btn-3 {
+    margin-top: 20px;
+    color: black;
+    background-color: #FFD365;
+    border: none;
+}
+
 .profile-btn-2:active {
     background-color: #019267;
     color: white;
+}
+
+.hr-profile{
+    border: 1px solid white;
+    margin-left: 15px;
+    margin-right: 15px;
 }
