new spot changes

--- a/public/css/new_spot.css
+++ b/public/css/new_spot.css
@@ -1,9 +1,20 @@
 .new-spot-form{
     max-width: 500px;
+    color: white;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
-.new-spot-form input{
+.new-spot-form input, .new-spot-form textarea, .new-spot-form select{
     width: 100%;
+    border: none;
+    outline: none;
+    width: 100%;
+    max-width: 250px;
+    border-bottom: 3px solid #FFD800;
+    background-color: #e8f0f265;
+    font-family: 'Josefin Sans', sans-serif;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
 
 .new-spot-form label{
@@ -11,5 +22,21 @@
 }
 
 .new-spot-form .send{
+    font-family: 'Bree Serif', serif;
+    padding: 3px 0px 5px 0px;
     width: 100%;
+    max-width: 180px;
+    border-radius: 25px;
+    transition: all 0.5s;
+    background-color: #ffe449;
+    border: none;
+    color: #141E27;
+    max-height: 36px;
+}
+
+.h1-newspot{
+    font-family: 'Bree Serif', serif;
+    color: #00C09A;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
