--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,5 @@
-@media only screen and (min-width: 1070px){
-    .hr-profile{
+@media only screen and (min-width: 1070px) {
+    .hr-profile {
         margin-left: 25% !important;
         margin-right: 25% !important;
     }
@@ -8,9 +8,10 @@
 .profile-box {
     font-family: 'Josefin Sans', sans-serif !important;
     margin-top: 55px;
-    text-align: center
+    text-align: center;
 }
-.profile-box h3{
+
+.profile-box h3 {
     color: white;
 }
 
@@ -104,7 +105,15 @@
     margin-right: 15px;
 }
 
-.hr-profile{
+.profile-btn-1 {
+    border-radius: 25px;
+    border: none;
+    margin-top: 20px;
+    color: #E8F0F2;
+    background-color: #019267;
+}
+
+.hr-profile {
     border: 1px solid white;
     margin-left: 15px;
     margin-right: 15px;
