--- a/public/css/spot.css
+++ b/public/css/spot.css
@@ -1,5 +1,5 @@
 .spotContainer {
-    padding: 25px 15px 0 15px;
+    padding: 25px 15px 55px 15px;
     max-width: 900px;
 }
 
@@ -16,7 +16,7 @@
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(255, 255, 255, 0.402);
+    background-color: rgba(255, 255, 255, 0.13);
 }
 
 /* On screens that are 992px or more*/
@@ -26,6 +26,7 @@
     }
 }
 
+
 /*=====INTERACT BUTTONS=====*/
 
 .interactButtons {
@@ -33,21 +34,28 @@
 }
 
 .likeButton,
-.favButton {
+.favButton{
     height: 27px;
-    padding-right: 10px;
+    padding-right: 2px;
+    padding-left: 10px;
+    transition: all .2s ease;
 }
 
-.mapsButton {
-    height: 43px;
-    background-color: #E8E8E8;
-    border-radius: 100px;
-    width: 59px;
+.likeButton:hover,
+.favButton:hover
+{
+    transform: scale(1.2);
 }
 
 .mapsImg {
     height: 100%;
 }
+
+.totalLikes{
+    display: inline;
+    color: white;
+}
+
 
 /*=====INFO SPOT=====*/
 
@@ -83,11 +91,15 @@
 
 .hr-spot {
     border: 1px solid white;
+    margin: 42px 0 23px 0;
 }
 
 .comments-spot {
-    margin-top: 50px;
     padding: 0 !important;
+}
+
+.comments-spot a{
+    font-weight: bold;
 }
 
 .comments-spot p {
@@ -120,6 +132,12 @@
     resize: none;
 }
 
+.input-new-comment-spot:focus{
+    background-color: #00c89617;
+    color: #88d7c3;
+    border-bottom: 6px solid #00C897;
+}
+
 .add-comment-btn {
     font-family: 'Bree Serif', serif;
     padding: 4px 12px 6px;
@@ -128,11 +146,15 @@
     font-size: 14px;
     color: white;
     background-color: #00C897;
-    margin-top: 20px;
+    margin-top: 9px;
     width: 85px;
     height: 31px;
 }
 
 .add-comment-btn img{
     height: 24px;
+}
+
+.add-comment-spot{/*form*/
+    margin-bottom: 28px;
 }
