--- a/public/css/spot.css
+++ b/public/css/spot.css
@@ -3,6 +3,10 @@
     max-width: 900px;
 }
 
+.swal2-title{
+    text-align: center !important;
+}
+
 /*=====CAROUSEL=====*/
 .carousel {
     border: 1px solid white;
@@ -33,14 +37,15 @@
     margin-top: 14px;
 }
 
+.reportButton,
 .likeButton,
 .favButton{
     height: 27px;
-    padding-right: 2px;
-    padding-left: 10px;
     transition: all .2s ease;
+    padding-left: 10px;
 }
 
+.reportButton:hover,
 .likeButton:hover,
 .favButton:hover
 {
@@ -49,6 +54,13 @@
 
 .mapsImg {
     height: 100%;
+}
+
+.mapsButton{
+    height: 43px;
+    background-color: #E8E8E8;
+    border-radius: 100px;
+    padding: 5px 17px 2px;
 }
 
 .totalLikes{
@@ -128,7 +140,7 @@
     border-bottom: 6px solid #00C897;
     background-color: #00c8960f;
     color: #88d7c3;
-    border-radius: 15px;
+    border-radius: 6px;
     resize: none;
 }
 
