--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -15,7 +15,7 @@
     background-color: rgb(241, 241, 241);
     border-radius: 24px;
     padding: 20px 30px 40px 30px;
-    margin: 10px;
+    margin: 10px 0px 25px;
 }
 
 @media (max-width: 768px) {
