--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -12,21 +12,34 @@
 }
 
 .profile-box h3 {
+    padding-top: 13px;
     color: white;
 }
 
-.profile-input-group {
+.profile-input {
     background-color: #d4d4d442 !important;
     outline: none;
-    border-top: 6px solid #00C897;
+    border-bottom: 6px solid #00C897;
     color: white;
-    margin-bottom: 30px;
+    padding: 11px 14px 5px !important;
+}
+
+.profile-input:focus {
+    color: rgb(239, 239, 239);
+}
+
+.profile-input::placeholder {
+    color: rgb(182, 182, 182);
+}
+
+#descriptionedit{
+    margin-top: 24px;
 }
 
 .avatar-upload {
     position: relative;
-    max-width: 205px;
-    margin: 35px auto;
+    max-width: 192px;
+    margin: 35px auto 20px;
 }
 
 .avatar-upload .avatar-edit {
@@ -89,20 +102,31 @@
     background-position: center;
 }
 
+.editProfileBtn{
+    background-color: #00C897;
+    color: white;
+    border-radius: 40px;
+    padding: 4px 34px 1px;
+}
+
 .profile-btn {
     font-family: 'Bree Serif', serif;
     padding: 3px 0px 5px 0px;
     width: 100%;
     max-width: 130px;
-    transition: all 0.5s;
+    transition: all 0.3s;
     color: #00C897;
     border: none;
-    border-bottom: 5px solid #00C897;
-    background-color: #003C5A;
-    max-height: 36px;
-    margin-top: 30px;
-    margin-left: 15px;
-    margin-right: 15px;
+    border: 3px solid #00C897;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0);
+    height: 36px;
+    margin: 30px 15px 0;
+}
+
+.profile-btn:hover{
+    background-color: #00C897;
+    color: white;
 }
 
 .profile-btn-1 {
