--- a/public/css/spot.css
+++ b/public/css/spot.css
@@ -106,6 +106,10 @@
     margin: 42px 0 23px 0;
 }
 
+.comment{
+    margin-bottom: 25px;
+}
+
 .comments-spot {
     padding: 0 !important;
 }
@@ -121,14 +125,25 @@
     margin-bottom: 6px;
 }
 
+
 .button-comment-spot {
-    width: 15px;
-    margin-bottom: 25px;
+    height: 17px;
     margin-left: 5px;
+    transition: all .2s ease;
+}
+
+.button-comment-spot:hover{
+    transform: scale(1.3);
 }
 
 .comment-flag {
     margin-left: 15px;
+}
+
+.totalCommentLikes{
+    color: white;
+    font-size: 11px;
+    padding-left: 2px;
 }
 
 .input-new-comment-spot {
