--- a/public/css/new_spot.css
+++ b/public/css/new_spot.css
@@ -1,18 +1,15 @@
 .new-spot-form {
-    max-width: 500px;
     color: white;
     font-family: 'Josefin Sans', sans-serif;
+    max-width: 540px;
 }
 
 .new-spot-form input,
 .new-spot-form textarea,
 .new-spot-form select {
-    width: 100%;
     border: none;
     outline: none;
-    width: 100%;
-    max-width: 250px;
-    border-bottom: 3px solid #FFD800;
+    border-bottom: 3px solid #00C897;
     background-color: #e8f0f265;
     font-family: 'Josefin Sans', sans-serif;
     margin-top: 5px;
@@ -25,12 +22,10 @@
 
 .new-spot-form .send {
     font-family: 'Bree Serif', serif;
-    padding: 3px 0px 5px 0px;
-    width: 100%;
-    max-width: 180px;
+    padding: 4px 19px 5px;
     border-radius: 25px;
     transition: all 0.5s;
-    background-color: #ffe449;
+    background-color: #00C897;
     border: none;
     color: #141E27;
     max-height: 36px;
@@ -38,7 +33,7 @@
 
 .h1-newspot {
     font-family: 'Bree Serif', serif;
-    color: #ffe449;
+    color: #00C897;
     margin-top: 25px;
     margin-bottom: 25px;
 }
