--- a/public/css/spot_list.css
+++ b/public/css/spot_list.css
@@ -5,7 +5,7 @@
 h1{
     color: white;
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 34px;
+    font-size: 28px;
 }
 
 .spots{
@@ -27,6 +27,10 @@ h1{
     display: inline;
 }
 
+.emptyMsg{
+    color: rgb(196, 196, 196);
+}
+
 /*========Top row========*/
 
 .spot .categoryImg{
@@ -45,7 +49,13 @@ h1{
 
 .spot .actionBtn{
     height: 19px;
+    transition-duration: 0.3s;
 }
+
+.spot .actionBtn:hover{
+    transform: scale(1.3);
+}
+
 
 .spot .likeDiv{
     margin-left: 5px;
