admin buttons at spot view & better admin navigation

--- a/public/css/spot.css
+++ b/public/css/spot.css
@@ -7,6 +7,10 @@
     text-align: center !important;
 }
 
+.adminButtons{
+    margin-bottom: 10px;
+}
+
 /*=====CAROUSEL=====*/
 .carousel {
     border: 1px solid white;
